--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+::selection {
+  background-color: #47a3f3;
+  color: #fefefe;
+}
+
+/* TODO: 색깔 업데이트 필요 */
+:root {
+  --sh-class: #61AFEF; /* function names */
+  --sh-identifier: #56B6C2; /* constants */
+  --sh-sign: #ABB2BF; /* operators and punctuation */
+  --sh-string: #98C379; /* strings */
+  --sh-keyword: #C678DD; /* keywords */
+  --sh-comment: #5C6370; /* comments */
+  --sh-jsxliterals: #D19A66; /* numbers */
+}
+
 .prose .anchor {
   @apply absolute invisible no-underline;
 
@@ -84,46 +100,6 @@ table {
 
 .prose .callout > p {
   margin: 0 !important;
-}
-
-[data-rehype-pretty-code-fragment] code {
-  @apply grid min-w-full break-words rounded-none border-0 bg-transparent p-0 text-sm text-black;
-  counter-reset: line;
-  box-decoration-break: clone;
-}
-
-[data-rehype-pretty-code-fragment] .line {
-  @apply py-1;
-}
-
-[data-rehype-pretty-code-fragment] [data-line-numbers] > .line::before {
-  counter-increment: line;
-  content: counter(line);
-  display: inline-block;
-  width: 1rem;
-  margin-right: 1rem;
-  text-align: right;
-  color: gray;
-}
-
-[data-rehype-pretty-code-fragment] .line--highlighted {
-  @apply bg-slate-500 bg-opacity-10;
-}
-
-[data-rehype-pretty-code-fragment] .line-highlighted span {
-  @apply relative;
-}
-
-[data-rehype-pretty-code-fragment] .word--highlighted {
-  @apply rounded-md bg-slate-500 bg-opacity-10 p-1;
-}
-
-[data-rehype-pretty-code-title] {
-  @apply px-4 py-3 font-mono text-xs font-medium border rounded-t-lg text-neutral-200 border-[#333333] bg-[#1c1c1c];
-}
-
-[data-rehype-pretty-code-title] + pre {
-  @apply mt-0 rounded-t-none border-t-0;
 }
 
 html, body {
