--- a/app/globals.css
+++ b/app/globals.css
@@ -2,150 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
-::selection {
-  background-color: #47a3f3;
-  color: #fefefe;
-}
-
-/* TODO: 색깔 업데이트 필요 */
 :root {
-  --sh-class: #61afef; /* function names */
-  --sh-identifier: #56b6c2; /* constants */
-  --sh-sign: #abb2bf; /* operators and punctuation */
-  --sh-string: #98c379; /* strings */
-  --sh-keyword: #c678dd; /* keywords */
-  --sh-comment: #5c6370; /* comments */
-  --sh-jsxliterals: #d19a66; /* numbers */
+  --sh-class: #7aa2f7;
+  --sh-sign: #89ddff;
+  --sh-string: #9ece6a;
+  --sh-keyword: #bb9af7;
+  --sh-comment: #565f89;
+  --sh-jsxliterals: #7aa2f7;
+  --sh-property: #73daca;
+  --sh-entity: #e0af68;
 }
 
-.prose .anchor {
-  @apply absolute invisible no-underline;
-
-  margin-left: -1em;
-  padding-right: 0.5em;
-  width: 80%;
-  max-width: 700px;
-  cursor: pointer;
+/* :root {
+  --background: #ffffff;
+  --foreground: #171717;
 }
 
-.anchor:hover {
-  @apply visible;
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #0a0a0a;
+    --foreground: #ededed;
+  }
 }
 
-.prose a {
-  @apply transition-all decoration-neutral-400 dark:decoration-neutral-600 underline-offset-2 decoration-[0.1em];
-}
-
-.prose .anchor:after {
-  @apply text-neutral-300 dark:text-neutral-700;
-  content: "#";
-}
-
-.prose *:hover > .anchor {
-  @apply visible;
-}
-
-.prose pre {
-  @apply border border-neutral-800 bg-neutral-900;
-}
-
-.prose code {
-  @apply text-neutral-800 dark:text-neutral-200 px-1 py-0.5 border border-neutral-100 dark:border-neutral-800 rounded-lg bg-neutral-100 dark:bg-neutral-900;
-}
-
-.prose pre code {
-  @apply text-neutral-800 dark:text-neutral-200 p-0;
-  border: initial;
-}
-
-.prose img {
-  /* Don't apply styles to next/image */
-  @apply m-0;
-}
-
-.prose > :first-child {
-  /* Override removing top margin, causing layout shift */
-  margin-top: 1.25em !important;
-  margin-bottom: 1.25em !important;
-}
-
-code[class*="language-"],
-pre[class*="language-"] {
-  @apply text-neutral-50;
-}
-
-pre::-webkit-scrollbar {
-  display: none;
-}
-
-pre {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
-
-/* Remove Safari input shadow on mobile */
-input[type="text"],
-input[type="email"] {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-
-table {
-  display: block;
-  max-width: fit-content;
-  overflow-x: auto;
-  white-space: nowrap;
-}
-
-.prose .callout > p {
-  margin: 0 !important;
-}
-
-html,
 body {
-  height: 100%;
-  padding: 0;
-  margin: 0;
-}
-aside {
-  @apply grow-0 shrink-0;
-}
-
-/* prose width 설정 변경하기 */
-/* TODO: 이미지는 제외하도록 설정 ex) .prose :where(p):not(:where([class~="not-prose"] *)) <- 왠지 모르지만 class로 하면 적용이 잘 안됨 */
-.prose {
-  @apply max-w-none w-full;
-}
-
-@media (min-width: 735px) {
-  .prose {
-    width: 576px;
-  }
-}
-
-@media (min-width: 1069px) {
-  .prose {
-    width: 653px;
-  }
-}
-
-/*.prose :where(*):not(figure) {*/
-/*  @apply bg-amber-400*/
-/*}*/
-
-/*@media (min-width: 735px) {*/
-/*  .prose :where(*):not(figure) {*/
-/*    width: 576px;*/
-/*  }*/
-/*}*/
-
-/*@media (min-width: 1069px) {*/
-/*  .prose :where(*):not(figure) {*/
-/*    width: 653px;*/
-/*  }*/
-/*}*/
-
-/*.prose :where(figure) {*/
-/*  @apply bg-sky-500*/
-/*}*/
+  color: var(--foreground);
+  background: var(--background);
+  font-family: Arial, Helvetica, sans-serif;
+} */
